--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<script src="script.js"></script>
 </head>
+
+
 <body>
 	<button id="btn">Кнопка</button>
 </body>
